fixed overflow on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ nav a{
 	margin-left: -5%;
 }
 #container {
-	width: 200%;
+	width: 100%;
 	overflow: hidden;
 	margin: 5% auto;
 	background: white;
@@ -39,7 +39,7 @@ nav a{
 }
 
 .photobanner img{
-	width: 3%;
+	width: 4%;
 	height: 5%;
 }
 
